--- a/.classpath
+++ b/.classpath
@@ -5,4 +5,5 @@
 	<classpathentry kind="output" path="bin"/>
 	<classpathentry kind="output" path="bin"/>
 	<classpathentry kind="lib" path="lib\mysql-connector-java-8.0.30.jar"/>
+	<classpathentry kind="lib" path="lib\sqlite-jdbc-3.39.4.0.jar"/>
 </classpath>
